2011-06-02  Stefano Lattarini  <stefano.lattarini@gmail.com>

	self tests: fix another spurious failure
	Our ad-hoc usage of `tests/defs' in the testsuite's self tests
	stopped working properly when we made the test scripts re-execute
	themselves with the configure-time $SHELL.  Fix this.
	Fixes a regression introduced by commit 'v1.11-874-g1321be7'.
	* tests/self-check-exit.test: Export `AM_TESTS_REEXEC' to "no"
	before running the self tests.  This fixes a spurious failure
	present only when the test was run by hand.

2011-06-02  Stefano Lattarini  <stefano.lattarini@gmail.com>

	silent-rules tests: fix spurious failures with Sun Studio C++
	* tests/silentcxx.test: The C++ compiler from Sun Studio is named
	`CC'.  Account for this in our grepping checks on the make output.
	Since we are at it, throw in a couple of improvements to comments
	and formatting.
	* tests/silent-many-generic.test: The C++ compiler from Sun Studio
	is named `CC', and this can cause spurious failures in our grepping
	of the make output.  Work around this by using a wrapper script
	around the C++ compiler (generated on the fly), since filtering the
	make output proved to be too fragile.

2011-06-02  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failure in backcompat2.test on NetBSD
	* tests/backcompat2.test: Add trailing `:' in the body of a `for'
	loop, in case the last command there might have an exit status
	different 0.  This work around `set -e' issues in some BSD shells,
	e.g., NetBSD /bin/ksh.

2011-06-02  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failure in autohdr3.test
	* tests/autohder3.test (Makefile.am): Let `test' depend on `all',
	so that config.h header is truly remade.
	Remove now useless call to `$MAKE' when non-GNU make is in use.
	Failure introduced by commit `v1.11-895-g5e62b96'.

2011-06-02  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: fix spurious failure of cond29.test on NetBSD