@@ -1,3 +1,11 @@
+2011-06-05  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	self tests: check that `$me' can be overridden
+	* tests/self-check-me.test: Check that `$me' can be overridden
+	before sourcing ./defs, with or without sourcing ./defs-static
+	beforehand, and that this override is honored.  Update heading
+	comments.
+
 2011-06-02  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	self tests: fix another spurious failure
